# nextjs-fastapi-bootstrap

./: .firebaserc  .gitignore  CLAUDE.md  README.md  cloudbuild.yaml  firestore.indexes.json  firestore.rules
backend/: .env.example  main.py  pyproject.toml
backend/app/: config.py
backend/app/api/endpoints/: debug.py  waitlist.py
backend/app/core/: firebase.py
backend/app/schemas/: waitlist.py
backend/app/services/: waitlist.py
backend/tests/: conftest.py  test_waitlist.py
docs/: README.md  api-reference.md  architecture.md  deployment.md  development-setup.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
frontend/public/: site.webmanifest
frontend/src/__tests__/: LandingPage.test.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/proxy/: route.ts
frontend/src/app/components/: WaitlistForm.tsx
frontend/src/app/services/: api.ts
frontend/src/config/: firebase.ts
scripts/: generate-coverage.sh  generate-documentation-bundle.sh  upload-codebase-docs.sh  upload-documentation-bundle.sh
